--- a/social/templates/base.html
+++ b/social/templates/base.html
@@ -17,7 +17,7 @@
         {% if messages %}
         {%for message in messages %}
         <div class="alert alert-warning alert-dismissible fade show" role="alert">
-            <strong>Oh noes!</strong> {{message}}
+            {{message}}
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
         {% endfor %}
