--- a/social/templates/navbar.html
+++ b/social/templates/navbar.html
@@ -21,6 +21,9 @@
                     <a class="nav-link" href="{% url 'profile' request.user.id%}">Profile</a>
                 </li>
                 {% endif %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'login'%}">Login</a>
+                </li>
             </ul>
         </div>
     </div>
