--- a/social/templates/profile.html
+++ b/social/templates/profile.html
@@ -7,8 +7,19 @@
     <div class="row">
         <div class="col-8">
             <h1>{{ profile.user.username}}'s Profile</h1>
+            <br>
+            {% if tweets %}
+            {% for tweet in tweets %}
+            <div class="alert alert-dark" role="alert">
+                <strong>{{tweet.body}}</strong><br>
+                <small class="text-muted">({{tweet.created_at}}) by @{{tweet.user.username}}</small>
+            </div>
+            <br>
+            {% endfor %}
+            {% endif %}
         </div>
         <div class="col-4">
+            <br><br><br>
             <div class="card">
                 <div class="card-header">
                     Follows:
