feat: finished tweets and registration

--- a/social/templates/home.html
+++ b/social/templates/home.html
@@ -10,7 +10,8 @@
             {% for tweet in tweets %}
             <div class="alert alert-dark" role="alert">
                 <strong>{{tweet.body}}</strong><br>
-                <small class="text-muted">({{tweet.created_at}}) by @{{tweet.user.username}}</small>
+                <small class="text-muted">({{tweet.created_at}}) by
+                    <a href="{% url 'profile' tweet.user.id%}">@{{tweet.user.username}}</a></small>
             </div>
             <br>
             {% endfor%}
