--- a/members/templates/authenticate/login.html
+++ b/members/templates/authenticate/login.html
@@ -2,16 +2,24 @@
 
 {% block content %}
 
-<div class="container text-center">
+<div class="container">
     <div class="row">
         <div class="col-3"></div>
-        <div class="col-6">
+        <div class="col-6 shadow p-4 md-5 bg-body rounded">
 
             <h1>Login</h1>
-            <br><br><br>
+            <br>
             <form method="POST">
                 {% csrf_token %}
-                <button type="submit" class="btn btn-secondary">Tweet!</button>
+                <div class="mb-3">
+                    <label for="exampleInputEmail1" class="form-label">Username:</label>
+                    <input type="text" class="form-control" name="username" aria-describedby="emailHelp">
+                </div>
+                <div class="mb-3">
+                    <label for="exampleInputPassword1" class="form-label">Password:</label>
+                    <input type="password" class="form-control" name="password">
+                </div>
+                <button type="submit" class="btn btn-primary">Login</button>
             </form>
         </div>
         <div class="col-3"></div>
